--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,11 @@ body{
  
 }
 .card{
-  width: 90%;
-  max-width: 470px;
+  width: 80%;
+  max-width: 430px;
   background: linear-gradient(135deg,#d5def5,#5b548a);
   color:#fff;
-  margin: 100px auto 0;
+  margin: 50px auto 0;
   border-radius: 20px;
   padding: 40px 35px;
   text-align: center;
@@ -92,7 +92,7 @@ margin-top: 50px;
 
 }
 .weather{
-  display: none;
+  /* display: none; */
 }
 .error{
   text-align: left;
@@ -125,3 +125,7 @@ margin-top: 50px;
   font-size: 24px;
   font-weight: bold;
 }
+.weather-app { 
+  padding-bottom: 25px; /* Adds blank space at the bottom */
+}
+
